suppression de top-banner

--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
     <title>Formation GIT</title>
 </head>
 <body>
-    <div id ="top-banner">
+    <div >
         Bienvenue dans cette formation GIT !
        
     </div>
